--- a/assets/postcss/pages/_chat-app.css
+++ b/assets/postcss/pages/_chat-app.css
@@ -130,7 +130,7 @@
 
   .emoji-picker-insert {
     input:focus:not([tabindex^='-']) {
-      @apply outline-none;
+      @apply !outline-none;
     }
   }
 
