--- a/assets/pug/pages/starter-kit/dark.pug
+++ b/assets/pug/pages/starter-kit/dark.pug
@@ -14,7 +14,7 @@
 -var darkLayout=true;
 
 //- Breadcrumbs
--var pageTitle="Sample Page";
+-var pageTitle="Dark Mode";
 -var breadcrumb=['dashboard','Sample Page'];
 
 //- all JSON  
@@ -67,8 +67,6 @@ html(lang='en' class="dark")
 
                                 h6(class="mt-4 font-bold") PUG
                                 p(class="mt-1 text-content3") To use PUG it required node.js and basic knowledge of using it. Using PUG as template engine to generate whole template quickly with your selected layout and other custom changes. To getting start with PUG usage & template generating process please refer template documentation.
-
-
 
 
                 // Page Body End 
