--- a/html/template/user-profile.html
+++ b/html/template/user-profile.html
@@ -1038,7 +1038,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="flex flex-col gap-2">
+                  <div class="flex flex-col gap-2"> 
                     <div> 
                       <p class="text-content-white text-xs font-semibold">Emayila Sidorshina</p>
                       <p class="text-content-white text-xs font-semibold">Freelancer</p>
@@ -1744,14 +1744,14 @@
               <h5 class="text-center font-semibold dark:text-white">Add team member or new ones</h5>
               <div class="search-box relative">
                 <input class="border border-border-light dark:border dark:border-border-dark dark:text-white dark:bg-sidebar-dark2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px]  text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
-                <svg class=" cursor-pointer cursor-pointer xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[25px] absolute"> 
+                <svg class=" cursor-pointer  xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[25px] absolute"> 
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
                 </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
               </div>
-              <ul class="flex flex-col gap-3"> 
-                <li class="flex justify-between items-center add-friend">
+              <ul class="flex flex-col gap-3">
+                <li class="flex justify-between items-center add-friend"> 
                   <div class="flex items-center gap-2 w-full">
-                    <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/14.png" alt="user"></div>
+                    <div class="avatar rounded-full w-10 h-10"> <img src="../../assets/images/user-app/14.png" alt="user"></div>
                     <div class="w-[calc(100%_-_52px)]">
                       <p class="text-title text-xs font-semibold dark:text-white">Tiana Baumbach</p><span class="text-content3 font-semibold text-2xs">Web Designer</span>
                     </div>
