--- a/assets/pug/pages/starter-kit/monochrome-mode.pug
+++ b/assets/pug/pages/starter-kit/monochrome-mode.pug
@@ -11,7 +11,7 @@
 -var customizer=true;
 
 //- Breadcrumbs
--var pageTitle="Sample Page";
+-var pageTitle="Monochrome Mode";
 -var breadcrumb=['dashboard','Sample Page'];
 
 //- all JSON  
