--- a/assets/pug/layout/header/landing-header.pug
+++ b/assets/pug/layout/header/landing-header.pug
@@ -9,7 +9,7 @@ header.flex.items-center.justify-between(class="landing-header py-[calc(18px_+_(
     nav(class="navigation nav-menu 2lg:absolute transition-all relative z-20 2lg:left-0 2lg:w-full 2lg:translate-y-20 sm:translate-y-16 2lg:p-5 2lg:pt-0 2lg:top-[-100px] 2lg:invisible 2lg:opacity-0 2lg:bg-white") 
         ul.flex.items-center(class="2lg:flex-col 2lg:items-baseline 2lg:gap-1 gap-[calc(5px_+_(36_-_5)_*_((100vw_-_320px)_/_(1920_-_320)))] font-roboto") 
             li 
-                a(class="font-medium text-content3 home  text-base-responsive" href="#home")
+                a(class="font-medium text-content3 home text-base-responsive" href="#home")
                     | Home   
             li 
                 a(class="font-medium text-content3 demo text-base-responsive" href="#framework") 
@@ -20,11 +20,11 @@ header.flex.items-center.justify-between(class="landing-header py-[calc(18px_+_(
             li 
                 a(class="font-medium text-content3 application text-base-responsive" href="#application")
                     | Applications  
+            //- li 
+            //-     a(class="font-medium text-content3 core-feature text-base-responsive" href="#document")
+            //-         | Documentation  
             li 
-                a(class="font-medium text-content3 core-feature text-base-responsive" href="#document")
-                    | Documentation  
-            li 
-                a(class="font-medium text-content3 core-feature text-base-responsive" href="#document")
+                a(class="font-medium text-content3 core-feature text-base-responsive" href="#footer")
                     | Hire Us
 
     a.btn.btn-primary.text-white(class="sm:btn-sm" href="https://themeforest.net/user/pixelstrap/portfolio" target="_blank") 
