--- a/html/template/landing.html
+++ b/html/template/landing.html
@@ -35,13 +35,12 @@
                 </div>
                 <nav class="navigation nav-menu 2lg:absolute transition-all relative z-20 2lg:left-0 2lg:w-full 2lg:translate-y-20 sm:translate-y-16 2lg:p-5 2lg:pt-0 2lg:top-[-100px] 2lg:invisible 2lg:opacity-0 2lg:bg-white"> 
                   <ul class="flex items-center 2lg:flex-col 2lg:items-baseline 2lg:gap-1 gap-[calc(5px_+_(36_-_5)_*_((100vw_-_320px)_/_(1920_-_320)))] font-roboto"> 
-                    <li> <a class="font-medium text-content3 home  text-base-responsive" href="#home">Home   </a></li>
+                    <li> <a class="font-medium text-content3 home text-base-responsive" href="#home">Home   </a></li>
                     <li> <a class="font-medium text-content3 demo text-base-responsive" href="#framework">
                          Frameworks </a></li>
                     <li> <a class="font-medium text-content3 component text-base-responsive" href="#core-feature">Core Feature  </a></li>
                     <li> <a class="font-medium text-content3 application text-base-responsive" href="#application">Applications  </a></li>
-                    <li> <a class="font-medium text-content3 core-feature text-base-responsive" href="#document">Documentation  </a></li>
-                    <li> <a class="font-medium text-content3 core-feature text-base-responsive" href="#document">Hire Us</a></li>
+                    <li> <a class="font-medium text-content3 core-feature text-base-responsive" href="#footer">Hire Us</a></li>
                   </ul>
                 </nav><a class="btn btn-primary text-white sm:btn-sm" href="https://themeforest.net/user/pixelstrap/portfolio" target="_blank">
                    Purchase Now          </a>
@@ -57,7 +56,7 @@
                   <div class="flex items-center flex-wrap lg:justify-center lg:gap-[5px]  gap-[calc(0px_+_(12_-_0)_*_((100vw_-_320px)_/_(1920_-_320)))] mt-8 2xl:mt-6 lg:mt-5"><a class="flex items-center gap-[5px] 2sm:text-3xs  btn btn-secondary 2xl:py-2 text-white" href="https://themeforest.net/user/pixelstrap/portfolio" target="_blank"> 
                       <svg class="w-5 h-5 stroke-white"> 
                         <use href="../../assets/svg/sprite.svg#Buy"> </use>
-                      </svg><span class="text-sm font-medium">Purchase Now       </span></a><a class="flex items-center gap-[5px] 2sm:text-3xs  btn btn-success 2xl:py-2 text-white" href="../document/getting_started.html" target="_blank">
+                      </svg><span class="text-sm font-medium">Purchase Now       </span></a><a class="flex items-center gap-[5px] 2sm:text-3xs  btn btn-success 2xl:py-2 text-white" href="../document/index.html" target="_blank">
                       <svg class="w-5 h-5 stroke-white"> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
                       </svg><span class="text-sm font-medium">Documentation </span></a></div>
@@ -82,7 +81,7 @@
           </div>
         </div>
       </section>
-      <section class="bg-white py-section-space" id="framework">
+      <section class="bg-white py-section-space" id="">
         <div class="container">
           <div class="max-w-[46%] 2xl:max-w-[70%] 2md:max-w-[100%] mx-auto text-center mb-9 lg:mb-7 sm:mb-5 2xl:mb-8">
             <h2 class="text-title font-semibold leading-none">Admin <span class="text-primary font-semibold">Unique Layouts</span></h2>
@@ -98,7 +97,7 @@
           </div>
         </div>
       </section>
-      <section class="py-section-space bg-landingBg" id="core-feature">
+      <section class="py-section-space bg-landingBg" id="framework">
         <div class="container">
           <div class="max-w-[47%] 2xl:max-w-[70%] 2md:max-w-[100%] mx-auto text-center mb-9 lg:mb-7 sm:mb-5">
             <h2 class="text-title font-semibold">Pre-Build <span class="text-primary font-semibold">Components</span></h2>
@@ -374,7 +373,7 @@
           </div>
         </div>
       </section>
-      <footer class="relative overflow-hidden">  <img class="mx-auto xl:h-[200px] sm:h-[150px]" src="../../assets/images/landing/svg/footer.png" alt="banner"><img class="absolute left-[15%] top-[8%] animate__animated animate__infinite animate__pulse animate__delay-3" src="../../assets/images/landing/svg/Group-4.svg" alt="shape"><img class="absolute right-[7%] bottom-0 animate__animated animate__infinite animate__pulse animate__delay-3" src="../../assets/images/landing/svg/Group-6.svg" alt="shape"><img class="absolute left-[31%] bottom-[22%] animate__animated animate__infinite animate__pulse md:hidden" src="../../assets/images/landing/svg/cross.svg" alt="cross">
+      <footer class="relative overflow-hidden" id="footer">  <img class="mx-auto xl:h-[200px] sm:h-[150px]" src="../../assets/images/landing/svg/footer.png" alt="banner"><img class="absolute left-[15%] top-[8%] animate__animated animate__infinite animate__pulse animate__delay-3" src="../../assets/images/landing/svg/Group-4.svg" alt="shape"><img class="absolute right-[7%] bottom-0 animate__animated animate__infinite animate__pulse animate__delay-3" src="../../assets/images/landing/svg/Group-6.svg" alt="shape"><img class="absolute left-[31%] bottom-[22%] animate__animated animate__infinite animate__pulse md:hidden" src="../../assets/images/landing/svg/cross.svg" alt="cross">
         <div class="wavy-gif right-[16%] sm:hidden top-[15%]">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 251 38">
             <path fill="none" stroke-width="10" stroke-miterlimit="10" d="M0,9C17.93,9,17.93,29,35.85,29S53.78,9,71.71,9s17.92,20,35.85,20S125.49,9,143.42,9s17.93,20,35.86,20S197.21,9,215.14,9,233.07,29,251,29"></path>
