changes in document

--- a/assets/pug/pages/template/email.pug
+++ b/assets/pug/pages/template/email.pug
@@ -130,8 +130,8 @@ html(lang='en')
                         i(data-feather='paperclip' class="w-4 h-4 stroke-title")
                         span.text-sm.font-semibold.text-content3.uppercase Attachment (60 MB)
                       div.flex.items-center.gap-1
-                        button.btn.btn-light.text-xs.py-2.text-chart-dark(class="dark:bg-sidebar-dark2") View All
-                        button.btn.btn-light.text-xs.py-2.text-primary(class="dark:bg-sidebar-dark2") Download All
+                        button.btn.btn-light.text-xs.py-2.text-title(class="dark:bg-sidebar-dark2") View All
+                        button.btn.btn-light.text-xs.py-2.text-title(class="dark:bg-sidebar-dark2") Download All
                     div.flex.gap-4.items-center.flex-wrap
                       img(class="max-w-[180px] h-[115px] object-cover" src=`../../assets/images/email-app/1.png` alt=`flower`) 
                       img(class="max-w-[180px] h-[115px] object-cover" src=`../../assets/images/email-app/2.png` alt=`emoji`) 
