--- a/html/template/checkout.html
+++ b/html/template/checkout.html
@@ -1288,39 +1288,39 @@
                     <tbody>
                       <tr> 
                         <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
-                        <td class="min-w-[560px] 2lg:min-w-[450px]">
+                        <td class="2lg:min-w-[450px]">
                           <div> 
                             <h4 class="text-xs font-semibold text-title dark:text-white">Coffee Cup</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$98 * 2</span>
                           </div>
                         </td>
-                        <td class="min-w-[.625rem] dark:text-white">$190</td>
+                        <td class="dark:text-white">$190</td>
                       </tr>
                       <tr> 
                         <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
-                        <td class="min-w-[560px] 2lg:min-w-[450px]">
+                        <td class="2lg:min-w-[450px]">
                           <div> 
                             <h4 class="text-xs font-semibold text-title dark:text-white">Facewash - For Good skincare</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$75 * 2</span>
                           </div>
                         </td>
-                        <td class="min-w-[.625rem] dark:text-white">$150</td>
+                        <td class="dark:text-white">$150</td>
                       </tr>
                       <tr> 
                         <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
-                        <td class="min-w-[560px] 2lg:min-w-[450px]">
+                        <td class="2lg:min-w-[450px]">
                           <div> 
                             <h4 class="text-xs font-semibold text-title dark:text-white">Perfume - Great fragrance</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$299</span>
                           </div>
                         </td>
-                        <td class="min-w-[.625rem] dark:text-white">$299</td>
+                        <td class="dark:text-white">$299</td>
                       </tr>
                       <tr> 
                         <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
-                        <td class="min-w-[560px] 2lg:min-w-[450px]">
+                        <td class="2lg:min-w-[450px]">
                           <div> 
                             <h4 class="text-xs font-semibold text-title dark:text-white">Women's Leather Bags</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$212</span>
                           </div>
                         </td>
-                        <td class="min-w-[.625rem] dark:text-white">$212</td>
+                        <td class="dark:text-white">$212</td>
                       </tr>
                       <tr> 
                         <td class="text-xs font-bold dark:text-white" colspan="2">Sub Total :</td>
