--- a/html/template/email.html
+++ b/html/template/email.html
@@ -1423,8 +1423,8 @@
                     <div class="flex items-center justify-between sm:items-start sm:gap-2 sm:flex-col">
                       <div class="flex items-center gap-1"><i class="w-4 h-4 stroke-title" data-feather="paperclip"></i><span class="text-sm font-semibold text-content3 uppercase">Attachment (60 MB)</span></div>
                       <div class="flex items-center gap-1">
-                        <button class="btn btn-light text-xs py-2 text-chart-dark dark:bg-sidebar-dark2">View All</button>
-                        <button class="btn btn-light text-xs py-2 text-primary dark:bg-sidebar-dark2">Download All</button>
+                        <button class="btn btn-light text-xs py-2 text-title dark:bg-sidebar-dark2">View All</button>
+                        <button class="btn btn-light text-xs py-2 text-title dark:bg-sidebar-dark2">Download All</button>
                       </div>
                     </div>
                     <div class="flex gap-4 items-center flex-wrap"><img class="max-w-[180px] h-[115px] object-cover" src="../../assets/images/email-app/1.png" alt="flower"><img class="max-w-[180px] h-[115px] object-cover" src="../../assets/images/email-app/2.png" alt="emoji"><img class="max-w-[180px] h-[115px] object-cover" src="../../assets/images/email-app/3.png" alt="marble"></div>
