changes in password js

--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -184,8 +184,9 @@ if(passwordHide)
     // password hide js 
     script(src="../../assets/js/password-hide.js")
 
-
-
+if(confirmPassword)
+    // confirm password js 
+    script(src="../../assets/js/confirm-password.js")
 
 // Custom script   
 script(src='../../assets/js/script.js') 
