--- a/assets/pug/pages/template/reset-password.pug
+++ b/assets/pug/pages/template/reset-password.pug
@@ -11,6 +11,9 @@
 //- passwordHideShow
 -var passwordHideShow=true; 
 
+//- confirmPassword
+-var confirmPassword=true;
+
 doctype html 
 html(lang='en')
   include ../../layout/header-files
