--- a/html/template/reset-password.html
+++ b/html/template/reset-password.html
@@ -133,6 +133,8 @@
   <script src="../../assets/js/fontawesome/all.min.js"></script>
   <!-- password hide-show js-->
   <script src="../../assets/js/password-hide-show.js"></script>
+  <!-- confirm password js -->
+  <script src="../../assets/js/confirm-password.js"></script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js"> </script>
 </html>
