--- a/html/template/form-validation.html
+++ b/html/template/form-validation.html
@@ -1040,13 +1040,14 @@
                     <div class="tab-pan active show " data-tabContent="1">
                       <div class="checkout-detail">    
                         <form class="theme-form flex flex-col gap-4 !m-0">
-                          <div> 
-                            <label for="name">Name</label>
-                            <input type="text" id="name" required="" placeholder="Enter your name">
-                          </div>
                           <div>
                             <label for="email1">Email</label>
                             <input type="email" id="email1" placeholder="Enter your email id" required="">
+                          </div>
+                          <div class="relative">
+                            <label for="password2">Password</label>
+                            <input type="password" id="password2" required="" placeholder="Enter your Password">
+                            <div class="password-icon"><i class="feather-eye2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="feather-eye-off2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
                           </div>
                           <div class="flex justify-end items-center">
                             <button class="btn btn-primary text-white text-xs font-semibold py-2 !m-0 !w-fit" type="submit">Submit</button>
@@ -1059,12 +1060,16 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="checkout-detail"&gt;
   &lt;form class="theme-form flex flex-col gap-4 !m-0"&gt;
      &lt;div&gt;
-         &lt;label for="name&gt;Name&lt;/label&gt; 
-         &lt;input type="text" id="name" placeholder='Enter your name' required=''&gt;&lt;/input&gt; 
-     &lt;/div&gt;
-     &lt;div&gt;
          &lt;label for="email1&gt;Email&lt;/label&gt; 
          &lt;input type="email" id="email1" placeholder='Enter your email id' required=''&gt;&lt;/input&gt; 
+     &lt;/div&gt;
+     &lt;div class="relative"&gt;
+         &lt;label for="password2&gt;Password&lt;/label&gt; 
+         &lt;input type="text" id="password2" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
+         &lt;div class="password-icon"&gt;
+            &lt;i data-feather="eye" class="feather-eye2 showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+            &lt;i data-feather="eye-off" class="feather-eye-off2 showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+         &lt;/div&gt; 
      &lt;/div&gt;
      &lt;div class="flex items-center justify-end"&gt;
          &lt;button class="btn btn-primary text-white text-sm font-semibold py-2 !m-0 !w-fit" type="submit"&gt;Submit&lt;/button&gt; 
@@ -1346,10 +1351,13 @@
                   &lt;label for="name"&gt;Username&lt;/label&gt;
                   &lt;input type="text" id="name" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
               &lt;/div&gt;
-              &lt;div&gt;
-                  &lt;label for="password1"&gt;Password&lt;/label&gt;
-                  &lt;input type="password" id="password1" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
-              &lt;/div&gt;
+          &lt;div class="relative"&gt;
+              &lt;input type="text" id="password2" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
+              &lt;div class="password-icon"&gt;
+                 &lt;i data-feather="eye" class="showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+                 &lt;i data-feather="eye-off" class="showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+              &lt;/div&gt; 
+          &lt;/div&gt;
               &lt;div class="flex items-center justify-end"&gt;
                   &lt;button class="text-xs btn btn-primary text-white py-2 prev-2 prev !w-fit !m-0"&gt;Previous&lt;/button&gt;
                   &lt;button class="text-xs btn btn-primary text-white py-2 submit !w-fit !m-0"&gt;Submit&lt;/button&gt;
