--- a/html/template/form-validation.html
+++ b/html/template/form-validation.html
@@ -1044,10 +1044,12 @@
                             <label for="email1">Email</label>
                             <input type="email" id="email1" placeholder="Enter your email id" required="">
                           </div>
-                          <div class="relative">
+                          <div>
                             <label for="password2">Password</label>
-                            <input type="password" id="password2" required="" placeholder="Enter your Password">
-                            <div class="password-icon"><i class="feather-eye2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="feather-eye-off2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
+                            <div class="relative">
+                              <input type="password" id="password2" required="" placeholder="Enter your Password">
+                              <div class="password-icon"><i class="feather-eye2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="feather-eye-off2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
+                            </div>
                           </div>
                           <div class="flex justify-end items-center">
                             <button class="btn btn-primary text-white text-xs font-semibold py-2 !m-0 !w-fit" type="submit">Submit</button>
