changes done in checkbox page

--- a/assets/pug/pages/template/blog-detail.pug
+++ b/assets/pug/pages/template/blog-detail.pug
@@ -154,7 +154,7 @@ html(lang='en')
                     div.card-body 
                       div.bg-white.rounded-lg
                         img.rounded-t-lg(src='../../assets/images/blog/blog-details.png' alt='blog-details.png')
-                      h4.font-bold.mb-3 
+                      h4.font-bold.my-3 
                         | Floyd L. Mitchell
                       p.text-content(class="md:line-clamp-2").mb-3 Machines to craft the Geminis DK. Not only his overall appearance was inspired, but his behavior and even the way he shrugs were also fed to the robot, and Scharfe also donated the strands of his own hair to be used in the Geminoid wig. This bot is very realistic as people tend to be mistaken for the person designed to look alike. The main purpose of this creation is to make the humanoid look completely like a human.
                       p.text-content(class="md:line-clamp-2").mb-3 Leather detail shoulder contrasting color contour stunning silhouette working peplum. Structured chic panels power party flattering ultimate trim back pencil silhouette perfect look. Wardrobe stylish fitted long sleeves pleats texture fabric mini neckline cobalt blue. Monochrome textures casual daily polo neck knitted floral effortless short sleeve.
@@ -193,7 +193,7 @@ html(lang='en')
                               div.flex.justify-start.items-center.gap-1 
                                 i(data-feather="corner-up-right" class="w-[.75rem]").text-content
                                 span.text-content Reply 
-                        div(class="mt-3 divider w-full")
+                        div(class="w-full mt-3 divider")
                         div(class="pt-[1rem] ml-[3.125rem] sm:ml-unset first:pt-0 first:mt-0 first:border-none")                                 
                           div.flex.items-start.gap-3(class="w-[calc(100%_-_0rem)] xl:gap-2")  
                             a(href="blog-grid.html").avatar
@@ -207,7 +207,7 @@ html(lang='en')
                               div.flex.justify-start.items-center.gap-1
                                 i(data-feather="corner-up-right" class="w-[.75rem]").text-content
                                 span.text-content Reply
-                        div(class="mt-3 divider w-full")
+                        div(class="w-full mt-3 divider")
                         div(class="pt-[1rem] first:pt-0 first:mt-0 first:border-none")                   
                           div.flex.items-start.gap-3(class="w-[calc(100%_-_0rem)] xl:gap-2")  
                             a(href="blog-grid.html").avatar
