--- a/html/template/checkbox-radio.html
+++ b/html/template/checkbox-radio.html
@@ -1516,35 +1516,35 @@
                         <ul class="checkbox-wrapper">
                           <li> 
                             <input class="form-check-input" id="checkbox-icon" type="checkbox">
-                            <label class="form-check-label" for="checkbox-icon"><i data-feather="sliders"></i><span>Sliders</span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon"><i data-feather="sliders"></i><span>Sliders</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="checkbox-icon1" type="checkbox" checked="">
-                            <label class="form-check-label" for="checkbox-icon1"><i data-feather="user"></i><span>User </span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon1"><i data-feather="user"></i><span>User </span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="checkbox-icon2" type="checkbox">
-                            <label class="form-check-label" for="checkbox-icon2"><i data-feather="tag"></i><span>Tags</span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon2"><i data-feather="tag"></i><span>Tags</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="checkbox-icon3" type="checkbox">
-                            <label class="form-check-label" for="checkbox-icon3"><i data-feather="loader"></i><span>Loader </span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon3"><i data-feather="loader"></i><span>Loader </span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="checkbox-icon4" type="checkbox">
-                            <label class="form-check-label" for="checkbox-icon4"><i data-feather="eye-off"></i><span>Hidden</span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon4"><i data-feather="eye-off"></i><span>Hidden</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="checkbox-icon5" type="checkbox">
-                            <label class="form-check-label" for="checkbox-icon5"><i data-feather="folder"></i><span>Folder</span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon5"><i data-feather="folder"></i><span>Folder</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="checkbox-icon6" type="checkbox">
-                            <label class="form-check-label" for="checkbox-icon6"><i data-feather="map-pin"></i><span>Map</span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon6"><i data-feather="map-pin"></i><span>Map</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="checkbox-icon7" type="checkbox">
-                            <label class="form-check-label" for="checkbox-icon7"><i data-feather="wifi"></i><span>Network</span></label>
+                            <label class="form-check-label cursor-pointer" for="checkbox-icon7"><i data-feather="wifi"></i><span>Network</span></label>
                           </li>
                         </ul>
                       </div>
@@ -1555,56 +1555,56 @@
   &lt;ul class="checkbox-wrapper"&gt; 
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon" class="form-check-input"/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon'&gt;
               &lt;i data-feather="sliders"&gt;&lt;/i&gt;
               &lt;span&gt;Sliders&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon1" class="form-check-input" checked/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon1'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon1'&gt;
               &lt;i data-feather="user"&gt;&lt;/i&gt;
               &lt;span&gt;User&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon2" class="form-check-input"/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon2'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon2'&gt;
               &lt;i data-feather="tag"&gt;&lt;/i&gt;
               &lt;span&gt;Tag&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon3" class="form-check-input"/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon3'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon3'&gt;
               &lt;i data-feather="loader"&gt;&lt;/i&gt;
               &lt;span&gt;Loader&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon4" class="form-check-input"/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon4'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon4'&gt;
               &lt;i data-feather="eye-off"&gt;&lt;/i&gt;
               &lt;span&gt;Hidden&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon5" class="form-check-input"/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon5'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon5'&gt;
               &lt;i data-feather="folder"&gt;&lt;/i&gt;
               &lt;span&gt;Folder&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon6" class="form-check-input"/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon6'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon6'&gt;
               &lt;i data-feather="map-pin"&gt;&lt;/i&gt;
               &lt;span&gt;Map&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='checkbox' id="checkbox-icon7" class="form-check-input"/&gt;
-          &lt;label class="form-check-label" for='checkbox-icon7'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='checkbox-icon7'&gt;
               &lt;i data-feather="wifi"&gt;&lt;/i&gt;
               &lt;span&gt;Network&lt;/span&gt;
           &lt;/label&gt; 
@@ -1635,35 +1635,35 @@
                         <ul class="radio-wrapper">
                           <li> 
                             <input class="form-check-input" id="radio-icon" type="radio" name="radio2" value="option2">
-                            <label class="form-check-label" for="radio-icon"><i data-feather="sliders"></i><span>Sliders</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon"><i data-feather="sliders"></i><span>Sliders</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="radio-icon4" type="radio" name="radio2" value="option2" checked="">
-                            <label class="form-check-label" for="radio-icon4"><i data-feather="eye-off"></i><span>Hidden</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon4"><i data-feather="eye-off"></i><span>Hidden</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="radio-icon5" type="radio" name="radio2" value="option2">
-                            <label class="form-check-label" for="radio-icon5"><i data-feather="folder"></i><span>Folder</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon5"><i data-feather="folder"></i><span>Folder</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="radio-icon7" type="radio" name="radio2" value="option2">
-                            <label class="form-check-label" for="radio-icon7"><i data-feather="wifi"></i><span>Network</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon7"><i data-feather="wifi"></i><span>Network</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="radio-icon8" type="radio" name="radio2" value="option2">
-                            <label class="form-check-label" for="radio-icon8"><i data-feather="map-pin"></i><span>Map</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon8"><i data-feather="map-pin"></i><span>Map</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="radio-icon9" type="radio" name="radio2" value="option2">
-                            <label class="form-check-label" for="radio-icon9"><i data-feather="delete"></i><span>Trash</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon9"><i data-feather="delete"></i><span>Trash</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="radio-icon10" type="radio" name="radio2" value="option2">
-                            <label class="form-check-label" for="radio-icon10"><i data-feather="user"></i><span>User</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon10"><i data-feather="user"></i><span>User</span></label>
                           </li>
                           <li> 
                             <input class="form-check-input" id="radio-icon11" type="radio" name="radio2" value="option2">
-                            <label class="form-check-label" for="radio-icon11"><i data-feather="play"></i><span>Play</span></label>
+                            <label class="form-check-label cursor-pointer" for="radio-icon11"><i data-feather="play"></i><span>Play</span></label>
                           </li>
                         </ul>
                       </div>
@@ -1674,56 +1674,56 @@
   &lt;ul class="radio-wrapper"&gt; 
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon" class="form-check-input" name='radio2' value='option2'/&gt;
-          &lt;label class="form-check-label" for='radio-icon'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon'&gt;
               &lt;i data-feather="sliders"&gt;&lt;/i&gt;
               &lt;span&gt;Sliders&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon4" class="form-check-input" name='radio2' value='option2' checked/&gt;
-          &lt;label class="form-check-label" for='radio-icon4'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon4'&gt;
               &lt;i data-feather="eye-off"&gt;&lt;/i&gt;
               &lt;span&gt;Hidden&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon5" class="form-check-input" name='radio2' value='option2'/&gt;
-          &lt;label class="form-check-label" for='radio-icon5'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon5'&gt;
               &lt;i data-feather="folder"&gt;&lt;/i&gt;
               &lt;span&gt;Folder&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon7" class="form-check-input" name='radio2' value='option2'/&gt;
-          &lt;label class="form-check-label" for='radio-icon7'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon7'&gt;
               &lt;i data-feather="wifi"&gt;&lt;/i&gt;
               &lt;span&gt;Network&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon8" class="form-check-input" name='radio2' value='option2'/&gt;
-          &lt;label class="form-check-label" for='radio-icon8'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon8'&gt;
               &lt;i data-feather="map-pin"&gt;&lt;/i&gt;
               &lt;span&gt;Map&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon9" class="form-check-input" name='radio2' value='option2'/&gt;
-          &lt;label class="form-check-label" for='radio-icon9'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon9'&gt;
               &lt;i data-feather="delete"&gt;&lt;/i&gt;
               &lt;span&gt;Trash&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon10" class="form-check-input" name='radio2' value='option2'/&gt;
-          &lt;label class="form-check-label" for='radio-icon10'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon10'&gt;
               &lt;i data-feather="user"&gt;&lt;/i&gt;
               &lt;span&gt;User&lt;/span&gt;
           &lt;/label&gt; 
       &lt;/li&gt;
       &lt;li&gt;
           &lt;input type='radio' id="radio-icon11" class="form-check-input" name='radio2' value='option2'/&gt;
-          &lt;label class="form-check-label" for='radio-icon11'&gt;
+          &lt;label class="cursor-pointer form-check-label" for='radio-icon11'&gt;
               &lt;i data-feather="play"&gt;&lt;/i&gt;
               &lt;span&gt;Play&lt;/span&gt;
           &lt;/label&gt; 
