--- a/html/template/blog-detail.html
+++ b/html/template/blog-detail.html
@@ -1136,7 +1136,7 @@
                   <div class="card p-6 sm:p-4"> 
                     <div class="card-body"> 
                       <div class="bg-white rounded-lg"><img class="rounded-t-lg" src="../../assets/images/blog/blog-details.png" alt="blog-details.png"></div>
-                      <h4 class="font-bold mb-3">
+                      <h4 class="font-bold my-3">
                          Floyd L. Mitchell</h4>
                       <p class="text-content md:line-clamp-2 mb-3">Machines to craft the Geminis DK. Not only his overall appearance was inspired, but his behavior and even the way he shrugs were also fed to the robot, and Scharfe also donated the strands of his own hair to be used in the Geminoid wig. This bot is very realistic as people tend to be mistaken for the person designed to look alike. The main purpose of this creation is to make the humanoid look completely like a human.</p>
                       <p class="text-content md:line-clamp-2 mb-3">Leather detail shoulder contrasting color contour stunning silhouette working peplum. Structured chic panels power party flattering ultimate trim back pencil silhouette perfect look. Wardrobe stylish fitted long sleeves pleats texture fabric mini neckline cobalt blue. Monochrome textures casual daily polo neck knitted floral effortless short sleeve.</p>
@@ -1170,7 +1170,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="mt-3 divider w-full"></div>
+                        <div class="w-full mt-3 divider"></div>
                         <div class="pt-[1rem] ml-[3.125rem] sm:ml-unset first:pt-0 first:mt-0 first:border-none">                                
                           <div class="flex items-start gap-3 w-[calc(100%_-_0rem)] xl:gap-2"> <a class="avatar" href="blog-grid.html">
                               <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/29.jpg" alt="avatar"></div></a>
@@ -1182,7 +1182,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="mt-3 divider w-full"></div>
+                        <div class="w-full mt-3 divider"></div>
                         <div class="pt-[1rem] first:pt-0 first:mt-0 first:border-none">                  
                           <div class="flex items-start gap-3 w-[calc(100%_-_0rem)] xl:gap-2"> <a class="avatar" href="blog-grid.html">
                               <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9 "><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div></a>
